--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "parcel-bundler": "^1.12.3",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.5.3"
   }
 }
