--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-    "redux-undo": "^0.6.1"
+    "redux-undo": "^0.6.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
+    "@types/uuid": "^3.4.5",
     "parcel-bundler": "^1.12.3",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.5.3"
