--- a/package.json
+++ b/package.json
@@ -28,24 +28,25 @@
   },
   "homepage": "https://www.rebalancecalc.com",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "gh-pages": "^2.0.1",
+    "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.11",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
+    "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "redux-undo": "^0.6.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/uuid": "^3.4.5",
-    "parcel-bundler": "^1.12.3",
+    "parcel-bundler": "^1.12.4",
     "redux-devtools-extension": "^2.13.8",
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.5"
   }
 }
