Tweak configs and compiler stuff
Added a tsconfig with proper settings for custom types, hopefully this will help with editor experience

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel src/index.html src/backwardCompat/v1/index.html",
     "build": "parcel build src/index.html src/backwardCompat/v1/index.html",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
