--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
+    "parcel-plugin-asset-copier": "^1.0.0",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
