--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-undo": "^0.6.1",
