--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/uuid": "^3.4.5",
     "gh-pages": "^2.2.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "1.12.3",
     "redux-devtools-extension": "^2.13.8",
     "rimraf": "^3.0.2",
     "typescript": "^3.7.5"
